--- a/geogebra/properties/command.properties
+++ b/geogebra/properties/command.properties
@@ -525,7 +525,7 @@ SimplifySyntax=Simplify[ <Function> ]
 #toStringSyntax=ToString[ <Object> ]
 #replaced with
 Text=Text
-TextSyntax=Text[ <Object> ]\nText[ <Object>, <Boolean for Substitution of Variables> ]\nText[ <Object>, <Point> ]\nText[ <Object>, <Point>, <Boolean for Substitution of Variables> ]
+TextSyntax=Text[ <Object> ]\nText[ <Object>, <Boolean for Substitution of Variables> ]\nText[ <Object>, <Point> ]\nText[ <Object>, <Point>, <Boolean for Substitution of Variables> ]\nText[ <Object>, <Point> ]\nText[ <Object>, <Point>, <Boolean for Substitution of Variables>, <LaTeX formula> ]
 
 FitSin=FitSin
 FitSinSyntax=FitSin[ <List of Points> ]
